<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="unknown">Unknown</string>
    <string name="not_available">N/A</string>
    <string name="app_information">App Information</string>
    <string name="launch">Launch</string>
    <string name="uninstall">Uninstall</string>
    <string name="search">Search</string>
    <string name="name">Name</string>
    <string name="package_name">Package Name</string>
    <string name="app_size">App Size</string>
    <string name="reversed">Reversed</string>
    <string name="apps_category">Apps Category</string>
    <string name="system">System</string>
    <string name="user">User</string>
    <string name="both">Both</string>
    <string name="app_typeface">App Typeface</string>
    <string name="desc_app_typeface">Change application\'s font style (English glyphs only).</string>
    <string name="appearance">Appearance</string>
    <string name="appearance_icon">Appearance Icon</string>
    <string name="total_apps">%1$d Apps</string>
    <string name="total_sensors">%1$d Sensors</string>
    <string name="total_notes">%1$d Notes</string>
    <string name="total_tags">%1$d Tags</string>
    <string name="apps">Apps</string>
    <string name="sorting_style">Sorting Style</string>
    <string name="open_application_settings">Open Application Settings…</string>
    <string name="preferences">Preferences</string>
    <string name="about">About</string>
    <string name="corner_radius_desc">Rounded corner radius of the various elements of the app.</string>
    <string name="corner_radius">Corner Radius</string>
    <string name="layouts">Layouts</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="color">Color</string>
    <string name="accent_colors">Accent Colors</string>
    <string name="accent_color_desc">Secondary color that appears along with various elements of the app such as icons or touch effects.</string>
    <string name="behavior">Behavior</string>
    <string name="dim_windows_desc">Dim underlying windows when a popup appears on the screen.\n\nTurning it off can help elevation shadows to standout more but reduces the contrast and vice-versa.</string>
    <string name="dim_windows">Dim Windows</string>
    <string name="blur_windows">Blur Windows</string>
    <string name="blur_windows_desc">Blur underlying windows when a popup appears on the screen.\n\nMay affect performance of the app.</string>
    <string name="shadows_desc">Adds the nice looking accent colored ambient shadows to various elevated views of the app.\n\nOnly available in API 28 or above.</string>
    <string name="show_colored_shadows">Show Colored Shadows</string>
    <string name="configuration">Configuration</string>
    <string name="desc_application_theme">Change whether the application uses dark or light mode.</string>
    <string name="application_theme">Application Theme</string>
    <string name="follow_system">Follow System</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="storage">Storage</string>
    <string name="apk_base_package">APK (Base Package)</string>
    <string name="split_packages">Split Packages</string>
    <string name="cache">Cache</string>
    <string name="data">Data</string>
    <string name="directories">Directories</string>
    <string name="usage">Usage</string>
    <string name="version">Version</string>
    <string name="version_code">Version Code</string>
    <string name="version_name">Version Name</string>
    <string name="install_location">Install Location</string>
    <string name="minimum_sdk">Minimum SDK</string>
    <string name="target_sdk">Target SDK</string>
    <string name="uid">UID</string>
    <string name="install_date">Install Date</string>
    <string name="update_date">Update Date</string>
    <string name="permissions">Permissions</string>
    <string name="activities">Activities</string>
    <string name="services">Services</string>
    <string name="certificate">Certificate</string>
    <string name="resources">Resources</string>
    <string name="receivers">Receivers</string>
    <string name="manifest">Manifest</string>
    <string name="providers">Providers</string>
    <string name="screen">Screen</string>
    <string name="keep_screen_on">Keep Screen On</string>
    <string name="keep_screen_on_desc">Prevents device from sleeping while the app is visible.</string>
    <string name="signature_or_system">Signature Or System</string>
    <string name="signature">Signature</string>
    <string name="normal">Normal</string>
    <string name="dangerous">Dangerous</string>
    <string name="sign_algorithm">Sign Algorithm</string>
    <string name="valid_from">Valid from</string>
    <string name="certificate_md5">Certificate MD5</string>
    <string name="certificate_sha1" tools:ignore="Typos">Certificate SHA1</string>
    <string name="certificate_sha256">Certificate SHA256</string>
    <string name="issuer">Issuer</string>
    <string name="sign_algorithm_oid">Sign Algorithm OID</string>
    <string name="public_key">Public Key</string>
    <string name="information">Information</string>
    <string name="save">Save</string>
    <string name="copy">Copy</string>
    <string name="saved_successfully">Saved Successfully</string>
    <string name="failed">Failed</string>
    <string name="app_info">App Info</string>
    <string name="uses_feature">Uses Features</string>
    <string name="gles_version">GLES Version</string>
    <string name="error">Error</string>
    <string name="required">Required</string>
    <string name="not_required">Not Required</string>
    <string name="scrolling">Scrolling</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="none">None</string>
    <string name="bouncy_desc">Value for how much the list should bounce to and fro before settling after the list ends.</string>
    <string name="root">Root</string>
    <string name="use_root_methods">Root Mode</string>
    <string name="root_desc">Use root methods instead of using native Android APIs and Libs to perform some functions.\n\nThis option is recommended as it can make the user experience more streamlined.\n\nRooted device is required.</string>
    <string name="back_button">Back</string>
    <string name="files">Files</string>
    <string name="method_count">Method Count</string>
    <string name="multi_dex">Multi Dex, %1$s</string>
    <string name="single_dex">Single Dex, %1$s</string>
    <string name="terminal">Terminal</string>
    <string name="usage_statistics">Usage Statistics</string>
    <string name="close">Close</string>
    <string name="analytics">Analytics</string>
    <string name="device">Device</string>
    <string name="busybox">Busybox</string>
    <string name="ram">RAM</string>
    <string name="total_available">Total Available</string>
    <string name="total_used">Total Used</string>
    <string name="apps_heading">Apps</string>
    <string name="total_user_apps">Total User Apps</string>
    <string name="total_system_apps">Total System Apps</string>
    <string name="graphics">Graphics</string>
    <string name="send">Send</string>
    <string name="text_viewer">Text Viewer</string>
    <string name="extras">Extras</string>
    <string name="refresh">Refresh</string>
    <string name="exported">Exported</string>
    <string name="not_exported">Not Exported</string>
    <string name="n_enabled">%d Enabled</string>
    <string name="n_disabled">%d Disabled</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="desc_not_available">Description not available.</string>
    <string name="permission_info_not_available">Permission information not available.</string>
    <string name="loading">Loading</string>
    <string name="total">Total %d</string>
    <string name="split_apk_detected">Split APK Detected</string>
    <string name="creating_split_package">Creating split ZIP package</string>
    <string name="preparing_apk_file">Preparing APK file</string>
    <string name="done">Done!</string>
    <string name="clear_data">Clear Data</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="use_binary_format">Use Binary Format</string>
    <string name="desc_binary_format">Use binary format for showing file sizes instead of using the conventional SI format.\n\ni.e. 1024 kB = 1 mB</string>
    <string name="not_granted">Not Granted, Click to Allow</string>
    <string name="usage_access_permission">Usage Access Permission</string>
    <string name="grant_storage_access_permission">Grant Storage Access Permission</string>
    <string name="desc_usage_access">This app uses PACKAGE_USAGE_STATS permission to fetch and calculate the various app usage data available in the device.</string>
    <string name="desc_storage_permission">Storage permission is required and used to perform various app actions such as sharing app, making backup files or associate with files available in external storage.</string>
    <string name="granted">Granted</string>
    <string name="rejected">Rejected</string>
    <string name="desc_setup">Before moving ahead it is recommended to perform the necessary actions to make sure all the features of the app work.</string>
    <string name="skip">Skip</string>
    <string name="executing_command">Executing Command…</string>
    <string name="force_stop">Force Stop</string>
    <string name="are_you_sure">Are You Sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="open_in_settings">Open in Settings…</string>
    <string name="force_launch_with_action">Force Launch with Action</string>
    <string name="force_launch">Force Launch</string>
    <string name="action">Action</string>
    <string name="desc_intent_action">Make sure the activity is receiving or compatible with the above specified action. Activity will still launch but the action supplied will have no effect otherwise.</string>
    <string name="revoke">Revoke</string>
    <string name="grant">Grant</string>
    <string name="privileged">Privileged</string>
    <string name="development">Development</string>
    <string name="installer">Installer</string>
    <string name="verifier">Verifier</string>
    <string name="pre_installed">Pre Installed</string>
    <string name="setup">Setup</string>
    <string name="instant">Instant</string>
    <string name="runtime">Runtime</string>
    <string name="oem">OEM</string>
    <string name="vendor_privileged">Vendor Privileged</string>
    <string name="text_classifier">Text Classifier</string>
    <string name="wellbeing">Wellbeing</string>
    <string name="application_type">Application Type</string>
    <string name="time_used">Time Used</string>
    <string name="data_sent">Data Sent</string>
    <string name="data_received">Data Received</string>
    <string name="wifi_received">WiFi Received</string>
    <string name="wifi_sent">WiFi Sent</string>
    <string name="uninstalled">Uninstalled</string>
    <string name="accessibility">Accessibility</string>
    <string name="game">Game</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="image">Image</string>
    <string name="social">Social</string>
    <string name="news">News</string>
    <string name="maps">Maps</string>
    <string name="productivity">Productivity</string>
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="xposed_module">Xposed Module</string>
    <string name="create_tags">Create Tags</string>
    <string name="relevance">Relevance</string>
</resources>