<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipChildren="false"
    android:clipToPadding="false">

    <app.simple.inure.decorations.corners.DynamicCornerLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:layout_margin="@dimen/dialog_padding"
        android:orientation="vertical"
        android:padding="@dimen/dialog_padding">

        <app.simple.inure.decorations.typeface.TypeFaceTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sort"
            android:textSize="@dimen/preferences_title_text_size"
            app:appFontStyle="bold"
            app:textColorStyle="primary" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/sort_chip_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:checkedChip="@id/time_used"
            app:chipSpacingHorizontal="5dp"
            app:chipSpacingVertical="@dimen/chip_vertical_spacing"
            app:selectionRequired="true"
            app:singleSelection="true">

            <app.simple.inure.decorations.views.Chip
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <app.simple.inure.decorations.views.Chip
                android:id="@+id/package_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/package_name" />

            <app.simple.inure.decorations.views.Chip
                android:id="@+id/size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_size" />

            <app.simple.inure.decorations.views.Chip
                android:id="@+id/install_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/install_date" />

            <app.simple.inure.decorations.views.Chip
                android:id="@+id/update_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_date" />

            <app.simple.inure.decorations.views.Chip
                android:id="@+id/min_sdk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minimum_sdk" />

            <app.simple.inure.decorations.views.Chip
                android:id="@+id/target_sdk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/target_sdk" />

            <app.simple.inure.decorations.views.Chip
                android:id="@+id/time_used"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_used" />

            <app.simple.inure.decorations.views.Chip
                android:id="@+id/data_sent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/data_sent" />

            <app.simple.inure.decorations.views.Chip
                android:id="@+id/data_received"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/data_received" />

            <app.simple.inure.decorations.views.Chip
                android:id="@+id/wifi_sent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifi_sent" />

            <app.simple.inure.decorations.views.Chip
                android:id="@+id/wifi_received"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifi_received" />

        </com.google.android.material.chip.ChipGroup>

        <app.simple.inure.decorations.typeface.TypeFaceTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sorting_style"
            android:textSize="@dimen/preferences_title_text_size"
            android:layout_marginTop="5dp"
            app:appFontStyle="bold"
            app:textColorStyle="primary" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/sorting_style_chip_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:chipSpacingHorizontal="5dp"
            app:chipSpacingVertical="@dimen/chip_vertical_spacing"
            app:selectionRequired="true"
            app:singleSelection="true">

            <app.simple.inure.decorations.views.Chip
                android:id="@+id/ascending"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ascending" />

            <app.simple.inure.decorations.views.Chip
                android:id="@+id/descending"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descending" />

        </com.google.android.material.chip.ChipGroup>

        <app.simple.inure.decorations.typeface.TypeFaceTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/application_type"
            android:textSize="@dimen/preferences_title_text_size"
            android:layout_marginTop="5dp"
            app:appFontStyle="bold"
            app:textColorStyle="primary" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/application_type_chip_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:chipSpacingHorizontal="5dp"
            app:chipSpacingVertical="@dimen/chip_vertical_spacing"
            app:selectionRequired="true"
            app:singleSelection="true">

            <app.simple.inure.decorations.views.Chip
                android:id="@+id/both"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/both" />

            <app.simple.inure.decorations.views.Chip
                android:id="@+id/system"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/system" />

            <app.simple.inure.decorations.views.Chip
                android:id="@+id/user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user" />

        </com.google.android.material.chip.ChipGroup>
    </app.simple.inure.decorations.corners.DynamicCornerLinearLayout>
</FrameLayout>