<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:padding="@dimen/dialog_padding">

    <app.simple.inure.decorations.corners.DynamicCornerLinearLayout
        android:layout_width="match_parent"
        android:clipChildren="true"
        android:clipToPadding="true"
        android:elevation="@dimen/dialog_elevation"
        android:orientation="vertical"
        android:padding="@dimen/dialog_padding"
        android:layout_height="wrap_content">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/tag_chip_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:chipSpacingHorizontal="5dp"
            app:chipSpacingVertical="@dimen/chip_vertical_spacing"
            app:selectionRequired="true"
            app:singleSelection="false">

            <app.simple.inure.decorations.views.Chip
                android:id="@+id/game"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game" />

            <app.simple.inure.decorations.views.Chip
                android:id="@+id/audio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/audio" />

            <app.simple.inure.decorations.views.Chip
                android:id="@+id/video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/video" />

            <app.simple.inure.decorations.views.Chip
                android:id="@+id/image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/image" />

            <app.simple.inure.decorations.views.Chip
                android:id="@+id/social"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/social" />

            <app.simple.inure.decorations.views.Chip
                android:id="@+id/news"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/news" />

            <app.simple.inure.decorations.views.Chip
                android:id="@+id/maps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/maps" />

            <app.simple.inure.decorations.views.Chip
                android:id="@+id/productivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/productivity" />

            <app.simple.inure.decorations.views.Chip
                android:id="@+id/accessibility"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accessibility" />

            <app.simple.inure.decorations.views.Chip
                android:id="@+id/xposed_module"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xposed_module" />

            <app.simple.inure.decorations.views.Chip
                android:id="@+id/foss"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/foss" />

        </com.google.android.material.chip.ChipGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <app.simple.inure.decorations.ripple.DynamicRippleImageButton
                android:id="@+id/select_all"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:src="@drawable/ic_select_all"
                android:layout_gravity="center_vertical"
                app:buttonTintType="accent" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <app.simple.inure.decorations.ripple.DynamicRippleTextView
                android:id="@+id/auto_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:gravity="center"
                android:padding="@dimen/dialog_padding"
                android:text="@string/create_tags"
                android:textSize="@dimen/info_text_small"
                app:appFontStyle="bold"
                app:textColorStyle="accent" />

        </LinearLayout>

    </app.simple.inure.decorations.corners.DynamicCornerLinearLayout>

</FrameLayout>
