<?xml version="1.0" encoding="utf-8"?>
<app.simple.inure.decorations.corners.DynamicCornerLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/dialogBackground"
    android:orientation="vertical"
    android:padding="@dimen/popup_padding">

    <app.simple.inure.decorations.ripple.DynamicRippleTextView
        android:id="@+id/popup_theme_light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/lato_bold"
        android:maxLines="1"
        android:paddingHorizontal="30dp"
        android:paddingVertical="20dp"
        android:text="@string/light"
        android:textColor="@color/textPrimary"
        android:textSize="@dimen/popup_text_size"
        app:appFontStyle="bold" />

    <app.simple.inure.decorations.ripple.DynamicRippleTextView
        android:id="@+id/popup_theme_dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_bold"
        android:paddingHorizontal="30dp"
        android:paddingVertical="20dp"
        android:text="@string/dark"
        android:textColor="@color/textPrimary"
        android:textSize="@dimen/popup_text_size"
        app:appFontStyle="bold" />

    <app.simple.inure.decorations.ripple.DynamicRippleTextView
        android:id="@+id/popup_theme_follow_system"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_bold"
        android:paddingHorizontal="30dp"
        android:paddingVertical="20dp"
        android:text="@string/follow_system"
        android:textColor="@color/textPrimary"
        android:textSize="@dimen/popup_text_size"
        app:appFontStyle="bold" />

</app.simple.inure.decorations.corners.DynamicCornerLinearLayout>
